# janus-gateway

./: CMakeLists.txt  Makefile.am  configure.ac  debug.h  ice.c  install_deps.sh  log.c  run_clang.sh  run_gcc.sh
conf/: janus.eventhandler.prometheusevh.jcfg.sample  janus.jcfg.sample.in  update_confs.sh
conf/asterisk/: extensions.conf  pjsip.conf  rtp.conf
conf/config/: janus.eventhandler.prometheusevh.jcfg.sample  set_config.sh
conf/janus/: janus.cfg  janus.eventhandler.rabbitmqevh.jcfg  janus.jcfg  janus.plugin.nosip.cfg  janus.transport.websockets.cfg  janus.transport.websockets.jcfg
events/: janus_prometheusevh.cc  janus_rabbitmqevh.c  janus_sampleevh.c
src/: cmdline.c  cmdline.h  debug.h  events.c  events.h  ice.c  janus.c  rtcp.c  utils.c  utils.h  version.c  ws_log.c  ws_log.h
src/events/: eventhandler.h  janus_rabbitmqevh.c
src/plugins/: janus_nosip.c  plugin.h
src/transports/: janus_websockets.c  transport.h
